<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.Results">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:elevation="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/results"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@color/default_gray"
                    android:fontFamily="@font/cairo_bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:indeterminateTint="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"/>

        <TextView
            android:id="@+id/no_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_marginVertical="50dp"
            android:layout_gravity="center"
            android:text="@string/no_results_yet"/>

        <TextView
            android:id="@+id/result_title"
            android:fontFamily="@font/cairo_bold"
            android:layout_marginHorizontal="20dp"
            android:visibility="gone"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Second term results"/>

        <LinearLayout
            android:id="@+id/result_lin"
            android:visibility="gone"
            android:layout_below="@id/result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/empty_box_decoration">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/subject"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_border"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/result"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />

        <com.example.nca_demo.Others.NonScrollListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:divider="@color/gray_border"
            android:animateLayoutChanges="true"
            android:listSelector="@android:color/transparent"
            android:id="@+id/list_view"/>

        </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>